tests/parsing/smtlib/v2.6/errors/152_function_def_arg_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/152_function_def_arg_list_1.smt2", line 2, character 21-22:
2 | (define-fun-rec foo (_))
                         ^
Error while parsing a function definition, read the reserved word '_',
      but expected a sorted variable of the form "(var sort)", or a closing
      parenthesis.
